# conan-cmake-export-example

./: .travis.yml  build.sh  conanws.yml
base/: conanfile.py
base/main/: CMakeLists.txt  base-config.cmake.in
base/main/a/: CMakeLists.txt  a.cpp  a.h
base/main/b/: CMakeLists.txt  b.cpp  b.h
dependent/: conanfile.py
dependent/main/: CMakeLists.txt
dependent/main/c/: CMakeLists.txt  c.cpp
